docs/grammar.ebnf
(* ──────────────────────────────────────────────────────────────────
   Ligare Grammar (EBNF)
   ──────────────────────────────────────────────────────────────────

   Notation:
     [ X ]        optional X
     { X }        zero or more X
     X | Y        alternation (X or Y)
     "..."        terminal token
     (* ... *)    comment

   Expression boundaries:
     The parser has one expression grammar for every term.  Outer
     grammar productions own delimiters such as `by`, `:=`, `)`, and
     `:`, and parse the delimited token slice with that same expression
     grammar.

   Whitespace & comments:
     Whitespace (spaces, tabs, \r, \f) is ignored except as
     token separators.  Newlines are significant only as implicit
     tactic separators (see Tactics).
     Line comments:     "--" to end of line.
     Block comments:    "{-" ... "-}"  (non-nestable).
     Block comments:    "/-" ... "-/"  (nestable, Lean 4 style).
     Definition docs:    "{-" ... "-}" immediately before a definition.
     Top-level docs:     "{-!" ... "-}" at the top level.

   ────────────────────────────────────────────────────────────────── *)

(* ── Top-level ──────────────────────────────────────────────────── *)

Program     ::= { TopLevel }

Entry       ::= "main.lig" must contain "pub" "def" "main" ":" "IO" "()" ":=" Expr

TopLevel    ::= Def
              | Instance
              | Use
              | Mod
              | Check
              | Eval
              | Expr

Def         ::= [ "pub" ] "def" Ident Params [ ":" Expr ] ":=" Expr
              | [ "pub" ] "def" Ident                   ":=" Expr

Instance    ::= [ "pub" ] "instance" Ident ":" Expr ":=" Expr

Use         ::= [ "pub" ] "use" UseItem { "," UseItem }

Mod         ::= [ "pub" ] "mod" Ident

UseItem     ::= Path [ "as" Ident ]
              | Path "::" "{" UseLeaf { "," UseLeaf } "}"

UseLeaf     ::= Ident [ "as" Ident ]

Path        ::= Ident "::" Ident { "::" Ident }

Check       ::= "#check" Expr [ ":" Expr ]

Eval        ::= "#eval" Expr

(* ── Definitions ────────────────────────────────────────────────── *)

Params      ::= { Param }

Param       ::= "(" Ident [ ":" Expr ] ")"
              | "{" Ident ":" Expr "}"       (* implicit compile-time parameter *)

(* ── Expressions ────────────────────────────────────────────────── *)

Expr        ::= IfExpr
              | OperatorExpr

IfExpr      ::= "if" Expr "then" Expr "else" Expr

OperatorExpr ::= TermApp { BinOp TermApp }

BinOp       ::= "*" | "/" | "%"          (* precedence 4, left-assoc  *)
              | "->"                     (* precedence 3, right-assoc *)
              | "+" | "-"                (* precedence 2, left-assoc  *)
              | "==" | "=" | "<=" | ">="
              | "/=" | "<"  | ">"        (* precedence 1, non-assoc   *)

(* ── Terms (application by juxtaposition) ───────────────────────── *)

TermApp     ::= LetExpr
              | FuncExpr
              | DoExpr
              | UnsafeExpr
              | PureExpr
              | DepArrow
              | Term { Term }

Term        ::= Atom TermSuffix

TermSuffix  ::= RefineSuffix TermSuffix
              | ":" Expr TermSuffix     (* type annotation *)
              | "by" Tactics TermSuffix  (* proof block    *)
              | ε

(* ── Atoms ──────────────────────────────────────────────────────── *)

Atom        ::= IntLiteral
              | "true"
              | "false"
              | Lambda
              | Ident
              | "(" Expr ")"
              | "by" Tactics             (* standalone proof block *)
              | "auto"                   (* auto proof             *)
              | "∧" | "∨" | "¬" | "→"   (* logical connectives    *)
              | "∧-intro" | "∧-elim-left"
              | "-" Atom                 (* unary negation (desugars to 0 - x) *)

IntLiteral  ::= [0-9]+

Lambda      ::= ("\" | "λ") Ident "." Expr

(* ── Let expressions ────────────────────────────────────────────── *)

LetExpr     ::= "let" Ident [ ":" Expr ] [ "by" Tactics ] ":=" Expr "in" Expr

(* ── Do expressions ─────────────────────────────────────────────── *)

DoExpr      ::= "do" LayoutDoBlock
              | "do" "{" DoStmt { ";" DoStmt } "}"

LayoutDoBlock ::= Newline IndentedDoStmt { Newline IndentedDoStmt }

DoStmt      ::= Ident "<-" Expr
              | "let" Ident [ ":" Expr ] ("=" | ":=") Expr
              | Expr

IndentedDoStmt starts in the same indentation column as the first
statement after `do`.  A less-indented following token ends the block;
a more-indented following line is parsed as a continuation of the
previous statement.

(* ── Func expressions ───────────────────────────────────────────── *)

FuncExpr    ::= "func" Ident Params [ ":" Expr ] ":=" Expr

(* ── Unsafe / IO elimination ───────────────────────────────────── *)

UnsafeExpr  ::= "unsafe" "{" Expr "}"

PureExpr    ::= "pure" Expr

(* ── Dependent arrow ────────────────────────────────────────────── *)

DepArrow    ::= "(" Ident ":" Expr ")" "->" Expr

(* ── Refinement types ───────────────────────────────────────────── *)

RefineSuffix ::= "where" "(" Ident "=>" Expr ")"

(* ── Tactics ────────────────────────────────────────────────────── *)

Tactics     ::= Tactic { ";" Tactic }

Tactic      ::= "exact" Expr
              | "apply" Expr
              | "intro" [ Ident ]
              | "have" Ident ":=" Expr
              | Expr                    (* implicit "exact" *)

Tactic terminators (tokens that end the tactic block):
  ":="  "in"  "then"  "else"  ")"  "}"  ":"  "def"  "#check"  "#eval"

(* ── Identifiers ────────────────────────────────────────────────── *)

Ident       ::= [a-zA-Z_][a-zA-Z0-9_]*

(* Reserved words (cannot be used as identifiers):
     let  in  if  then  else  true  false  by  fun  func  do  where  def
     extern  instance  unsafe  pure  auto  theorem  pub  use  mod  as
     struct  enum  match  with  of *)

(* ── Types (subset of expressions used as type constraints) ─────── *)

(* Types are just expressions.  Key type forms:

     "int"                     builtin base type
     "bool"                    builtin base type
     "data"                    universe of data
     T "->" T                  non-dependent arrow  (≡ Pi "" T T)
     "(" x ":" T ")" "->" T   dependent arrow       (≡ Pi x T T)
     T "where" "(" x "=>" P ")"   refinement type   (≡ Refine T (λx.P))
*)
